--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
-    "require": {
-    }
+	"name": "DesignMissoula-WOW",
+    "repo": "DesignMissoula/WOW",
+    "description": "Reveal CSS animation as you scroll down a page. By default, you can use it to trigger animate.css animations. But you can easily change the settings to your favorite animation library.",
+    "version": "1.1.3",
+    "homepage": "https://github.com/DesignMissoula/WOW",
+    "license": "MIT",
+    
 }
