--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "DesignMissoula-WOW",
-    "repo": "DesignMissoula/WOW",
+	"name": "designmissoula-wow",
+    "repo": "designmissoula/wow",
     "description": "Reveal CSS animation as you scroll down a page. By default, you can use it to trigger animate.css animations. But you can easily change the settings to your favorite animation library.",
     "version": "1.1.3",
-    "homepage": "https://github.com/DesignMissoula/WOW",
+    "homepage": "https://github.com/designmissoula/wow",
     "license": "MIT"
     
 }
